--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.button {
+.Button {
     background-color: #b3e6ff;
     border: none;
     color: #0d0d0d;
@@ -39,7 +39,7 @@ ol li input{
 }
 
 .column.left {
-  min-width: 250px;
+  max-width: 250px;
 }
 
 .column.right {
@@ -58,3 +58,14 @@ ol li input{
 body{ 
   background-color: #2F4F4F;
 }
+
+input[type="text"] {
+  width: 700px;
+  height: 50px;
+  font-size: 20px;
+  display: block;
+  margin-bottom: 50px;
+  background-color: #92a8d1;
+}
+
+
